<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="36dp"
    android:orientation="vertical"
    android:background="@drawable/gradient_background3"
    tools:context="com.example.semon.passguessing.AboutUs">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="ABOUT US"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutUsOne"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:textStyle="bold" />


            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutUsTwo"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutUsThree"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>